  * Only build the compatibility selinux code if libselinux is available or
    the user requested it. Also fixes build failures on non-Linux systems.
    Closes: #757637
  * Documentation:
    - Add a short description to each virtual field in dpkg-query(1), and
      mention the version they got introduced in dpkg.
    - Fix formatting of last paragraphs inside dselect(1) --color description.

  [ Updated programs translations ]
  * German (Sven Joachim).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Sun, 10 Aug 2014 03:01:45 +0200

dpkg (1.17.11) unstable; urgency=low

  [ Guillem Jover ]
  * Switch URLs in docs and code comments from http:// to https:// if the
    latter is available (round two). This includes the quilt patch header
    templates, and examples in man pages.
  * Update some dpkg git URLs to the new and newer (cgit switch) scheme.
  * Changes to libcompat:
    - Make the library testable.
    - Do not run qsort() over the scandir() list if it is NULL.
    - Add a setexecfilecon() compatibility function out from dpkg code.
  * Use SELinux setexecfilecon() if available in dpkg instead of ad-hoc code.
  * Replace obsolete <sys/fcntl.h> with <fcntl.h>, which fixes compilation on
    Android. Thanks to Fredrik Fornwall <fredrik@fornwall.net>. Closes: #752036
  * Fix file triggers/Unincorp descriptor leak on subprocesses. Regression
    introduced with the initial triggers implementation in dpkg 1.14.17.
    Closes: #751021
  * Do not disable the stack-protector build flags on arm64 in Debian and
    derivatives, the toolchain supports them now.
    Thanks to Adam Conrad <adconrad@debian.org>. Closes: #751032
  * When parsing the statoverride database from dpkg-statoverride do not
    consider it an error and refuse to operate at all if the user or group