@@ -8,6 +8,7 @@ dpkg (1.17.12) UNRELEASED; urgency=low
     - Add a short description to each virtual field in dpkg-query(1), and
       mention the version they got introduced in dpkg.
     - Fix formatting of last paragraphs inside dselect(1) --color description.
+  * Rework dselect columns code, to make it easier to maintain and read.
 
   [ Updated programs translations ]
   * German (Sven Joachim).
